# rust-eventsource-client

./: .release-please-manifest.json  CHANGELOG.md  CODEOWNERS  CONTRIBUTORS  Cargo.toml  DEVELOPING.md  Makefile  README.md  bacon.toml  coverage.sh  release-please-config.json
.circleci/: config.yml
.github/actions/build-docs/: action.yml
.github/actions/ci/: action.yml
.github/actions/publish/: action.yml
.github/variables/: rust-versions.env
.github/workflows/: check-rust-versions.yml  ci.yml  manual-publish.yml  release-please.yml
.ldrelease/: build.sh  config.yml  publish-dry-run.sh  publish.sh  update-version.sh
contract-tests/: Cargo.toml
eventsource-client/: CHANGELOG.md  Cargo.toml  README.md
eventsource-client/examples/: tail.rs
eventsource-client/src/: client.rs  decode.rs  error.rs  event_parser.rs  lib.rs  response.rs  retry.rs  transport.rs  transport_hyper.rs
eventsource-client/test-data/: .gitattributes  big-event-followed-by-another-crlf.sse  one-event-crlf.sse  persistent-event-id.sse
examples/: actix-example.rs  tail.rs
src/: client.rs  config.rs  decode.rs  error.rs  event_parser.rs  lib.rs
test-data/: big-event-followed-by-another.sse  one-event-crlf.sse  two-events-crlf.sse  two-events.sse
