[package]
name = "eventsource-client"
version = "0.7.0"
description = "Client for the Server-Sent Events protocol (aka EventSource)"
repository = "https://github.com/launchdarkly/rust-eventsource-client"
authors = ["Sam Stokes <sstokes@launchdarkly.com>"]
edition = "2018"
license = "Apache-2.0"
exclude = [
  ".circleci/*",
]

[dependencies]
futures = "0.3.12"
hyper = { version = "0.14.4", features = ["client", "http1", "tcp"] }
hyper-rustls = { version = "0.22.1", optional = true }
log = "0.4.6"
pin-project = "1.0.5"
tokio = { version = "1.2.0", features = ["time"] }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0.39", optional = true }
actix = { version = "0.12.0", optional = true }
actix-web = { version = "4.0.0-beta.10", optional = true }
reqwest = { version = "0.11.6", features = ["json"], optional = true }
env_logger = { version = "0.7.1", optional = true }
hyper-timeout = "0.4.1"

[dev-dependencies]
maplit = "1.0.1"
simplelog = "0.5.3"
tokio = { version = "1.2.0", features = ["macros", "rt-multi-thread"] }
test-case = "1.2.1"

[features]
default = ["rustls"]
rustls = ["hyper-rustls", "hyper/http2"]
build-binary = ["serde", "serde_json", "actix", "actix-web", "reqwest", "env_logger"]

[[bin]]
name = "sse-test-api"
required-features = ["build-binary", "rustls"]

[[example]]
name = "tail"
required-features = ["rustls", "env_logger"]
