[package]
name = "eventsource-client"
version = "0.16.1"
description = "Client for the Server-Sent Events protocol (aka EventSource)"
repository = "https://github.com/launchdarkly/rust-eventsource-client"
authors = ["LaunchDarkly"]
edition = "2021"
rust-version = "1.91.0"
license = "Apache-2.0"
keywords = ["launchdarkly", "feature-flags", "feature-toggles", "eventsource", "server-sent-events"]
exclude = ["CHANGELOG.md"]

[dependencies]
futures = "0.3.21"
hyper = { version = "0.14.19", features = ["client", "http1", "tcp"] }
hyper-rustls = { version = "0.24.1", optional = true }
log = "0.4.6"
pin-project = "1.0.10"
tokio = { version = "1.17.0", features = ["time"] }
hyper-timeout = "0.4.1"
rand = "0.8.5"
base64 = "0.22.1"

[dev-dependencies]
env_logger = "0.10.0"
maplit = "1.0.1"
mockito = "1.7.1"
simplelog = "0.12.1"
tokio = { version = "1.2.0", features = ["macros", "rt-multi-thread"] }
test-case = "3.2.1"
proptest = "1.0.0"


[features]
default = ["rustls"]
rustls = ["hyper-rustls", "hyper-rustls/http2"]

[[example]]
name = "tail"
required-features = ["rustls"]
