[package]
name = "eventsource-client"
version = "0.16.0"
description = "Client for the Server-Sent Events protocol (aka EventSource)"
repository = "https://github.com/launchdarkly/rust-eventsource-client"
authors = ["LaunchDarkly"]
edition = "2021"
rust-version = "1.83.0"
license = "Apache-2.0"
keywords = ["launchdarkly", "feature-flags", "feature-toggles", "eventsource", "server-sent-events"]
exclude = ["CHANGELOG.md"]

[dependencies]
bytes = "1.5"
futures = "0.3.21"
http = "1.0"
log = "0.4.6"
pin-project = "1.0.10"
tokio = { version = "1.17.0", features = ["time"] }
rand = "0.8.5"
base64 = "0.22.1"

#
# Dependencies for hyper transport
#
hyper = { version = "1.0", features = ["client", "http1", "http2"], optional = true }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "http2", "tokio"], optional = true }
http-body-util = { version = "0.1", optional = true }
hyper-http-proxy = { version = "1.1.0", optional = true }
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "http2", "native-tokio", "ring", "tls12", "webpki-roots"], optional = true }
hyper-timeout = { version = "0.5", optional = true }
tower = { version = "0.4", optional = true }
no-proxy = { version = "0.3.6", default-features = false }

[dev-dependencies]
env_logger = "0.10.0"
maplit = "1.0.1"
mockito = "1.7.1"
simplelog = "0.12.1"
tokio = { version = "1.2.0", features = ["macros", "rt-multi-thread"] }
test-case = "3.2.1"
proptest = "1.0.0"

[features]
default = ["hyper"]
hyper = ["dep:hyper", "dep:hyper-util", "dep:http-body-util", "dep:hyper-timeout", "dep:tower", "dep:hyper-http-proxy"]
hyper-rustls = ["hyper", "dep:hyper-rustls"]
