[package]
name = "eventsource-client"
version = "0.17.1"
description = "Client for the Server-Sent Events protocol (aka EventSource)"
repository = "https://github.com/launchdarkly/rust-eventsource-client"
authors = ["LaunchDarkly"]
edition = "2021"
rust-version = "1.92.0"
license = "Apache-2.0"
keywords = ["launchdarkly", "feature-flags", "feature-toggles", "eventsource", "server-sent-events"]
exclude = ["CHANGELOG.md"]

[dependencies]
bytes = "1.5"
futures = "0.3.21"
http = "1.0"
log = "0.4.6"
pin-project = "1.0.10"
tokio = { version = "1.17.0", features = ["time"] }
rand = "0.8.5"
base64 = "0.22.1"

launchdarkly-sdk-transport = { version = "0.1.0" }

[dev-dependencies]
env_logger = "0.10.0"
maplit = "1.0.1"
mockito = "1.7.1"
simplelog = "0.12.1"
tokio = { version = "1.2.0", features = ["macros", "rt-multi-thread"] }
test-case = "3.2.1"
proptest = "1.0.0"

[[example]]
name = "tail"
required-features = ["hyper"]

[features]
default = ["hyper"]
hyper = ["launchdarkly-sdk-transport/hyper"]
native-tls = ["hyper", "launchdarkly-sdk-transport/native-tls"]
hyper-rustls-native-roots = ["hyper", "launchdarkly-sdk-transport/hyper-rustls-native-roots"]
hyper-rustls-webpki-roots = ["hyper", "launchdarkly-sdk-transport/hyper-rustls-webpki-roots"]
